--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "firebase": "^6.0.2",
+    "npm": "^8.1.0",
     "quill": "^1.3.6",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
