--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     image: 'node:13.7'
     container_name: 'npm_${APP_NAME}'
     volumes:
-      - './src:/var/www/html'
+      - './dist:/var/www/html'
     working_dir: /var/www/html
     entrypoint:
       - npm
